src/App.css
body {
  background-color: lightgreen;
  font-family: sans-serif;
  margin-left: 7%;
  padding-bottom: 10px;
  width: 86%;
}

#header {
  max-height: 14vh;
}

#root {
  width: 100%;
}

.board {
  aspect-ratio: 1;
  position: relative;
  background-color: lightgreen;
  overflow: hidden;
  max-height: 70vh;
  margin-left: auto;
  margin-right: auto;
}

.path {
  width: 56%;
  position: absolute;
  top: 22%;
  left: 22%;
}

#header {
  display: flex;
  justify-content: center;
  align-items: center;
}

.gameTitle {
  position: relative;
  width: 3.2em;
  text-align: center;
  font-size: min(20vw, 6vh);
}

.gameBtn {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: min(1em, 75%);
  width: min(100%, 10em);
  height: 5.5vh;
  margin-top: 1px;
  margin-bottom: 1px;
}

.controls {
  position: relative;
  display: grid;
  grid-template-columns: auto;
  flex-direction: vertical;
  width: auto;
  text-align: center;
}

#location {
  position: absolute;
  width: 10%;
}

#ffwinner {
  position: absolute;
  top: 40%;
  left: 32%;
  font-size: 4cqw;
}

#pyrowinner {
  position: absolute;
  top: 40%;
  left: 32%;
  font-size: 4.2vw;
}

#mainmenu {
  position: absolute;
  width: 20%;
  top: 100%;
  left: 100%;
  transform: translate(-100%, -100%);
  font-size: min(2.5vw, 2.5vh);
  display: flex;
  justify-content: center;
  align-items: center;
}

#mainMenuBtnContainer {
  display: flex;
  flex-direction: column;
  gap: 10px;
  max-width: 18em;
}

.mainMenuButton {
  display: flex; 
  height: min(40px, 10vh);
  align-items: center;
}

label {
  margin-right: 15px;
}

.button-container {
  display: flex;
  gap: 10px;
  max-width: 18em;
}

#settings-container {
  margin: auto;
  width: fit-content;
}

.settingsBtn {
  width: 100%;
}

input[type="number"] {
  width: 3em;
}

input[type="range"] {
  width: min(80vw, 19em);
}

.grid-container {
  display: grid;
  grid-template-columns: auto auto;
  justify-content: start;
  column-gap: 10px;
  margin-bottom: 15px;
}

.settingsSection {
  margin-bottom: 15px;
}

